--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Desarrollo Cometa App</string>
+    <string name="app_name">Tandem &amp; Coworking</string>
     <string name="title_activity_login">Login</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
@@ -9,4 +9,6 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="login_shared_preference">com.example.desarrollocometaapp_login_shared_preference</string>
+
 </resources>
